objects/SDOC__SDTemplate__c.object
<CustomObject>
    <description>S-Doc: Document template definitions that are available in the S-Doc Library</description>
    <fields>
        <fullName>SDOC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Once checked, this template is visible for new document creation. Do NOT delete or modify template once activated, as they are needed to display previously created documents correctly. Instead, make changes in clone and then mark this one inactive.</description>
        <inlineHelpText>Once checked, this template is visible for new document creation. Do NOT delete or modify template once activated, as they are needed to display previously created documents correctly. Instead, make changes in clone and then mark this one inactive.</inlineHelpText>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Base_Object__c</fullName>
        <description>Primary object this template will be used with. Fields available are based on this object.</description>
        <inlineHelpText>Primary object this template will be used with. Fields available are based on this object.</inlineHelpText>
        <label>Related To Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__Base_Related_Object__c</fullName>
        <description>Use this field to automatically associate this document with a secondary parent object.</description>
        <inlineHelpText>Attempts to associate document generated using this template with a second object (parent). For example, you can relate documents created from an Opportunity (the base object) to also appear in the related list for an Account (additional Relationship).</inlineHelpText>
        <label>Additional Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__ContactRole__c</fullName>
        <description>If you are using a custom junction object to the Contact object, this value specifies the relationship name to that object.</description>
        <inlineHelpText>If you are using a custom junction object to the Contact object, this value specifies the relationship name to that object.</inlineHelpText>
        <label>Contact Role Related Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Create_Attachment_Name__c</fullName>
        <description>Name of generated attachment</description>
        <inlineHelpText>Name of generated attachment</inlineHelpText>
        <label>Auto Create Attachment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Create_Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>By checking, an attachment will be created for each document that uses this template. Enabling this feature will consume more file storage space.</description>
        <inlineHelpText>By checking, an attachment will be created for each document that uses this template. Enabling this feature will consume more file storage space.</inlineHelpText>
        <label>Auto Create Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this box will make this template visible on initial load of document creation page based on the Object Type. Typically, you want to set this checkbox for the 10 most used templates for each object type.</description>
        <inlineHelpText>Checking this box will make this template visible on initial load of document creation page based on the Object Type. Typically, you want to set this checkbox for the 10 most used templates for each object type.</inlineHelpText>
        <label>Initially Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Description__c</fullName>
        <description>Description of this document template. Optionally include any keywords, as this field along with the Name field are both searched during the document selection step.</description>
        <inlineHelpText>Description of this document template. Optionally include any keywords, as this field along with the Name field are both searched during the document selection step.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Category__c</fullName>
        <label>Document Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_From_OrgWideAddressId__c</fullName>
        <label>Email From Orgwide Address ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Lock Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_SendTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents a user from changing the outbound emails send to address field.</description>
        <inlineHelpText>Prevents a user from changing the outbound emails send to address field.</inlineHelpText>
        <label>Lock SendTo Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this will prevent users from setting the outbound subject line of the email.</description>
        <inlineHelpText>If checked, this will prevent users from setting the outbound subject line of the email.</inlineHelpText>
        <label>Lock Subject Line Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_bcc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Lock bcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_cc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Lock cc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_ReturnToRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email ReturnToRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_SendTo__c</fullName>
        <description>Default Send To address</description>
        <inlineHelpText>Default Send To address</inlineHelpText>
        <label>Email SendTo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Subject__c</fullName>
        <description>For HTML templates that are used to produce the email content, this value will be placed in the outbound email subject line.</description>
        <inlineHelpText>For HTML templates that are used to produce the email content, this value will be placed in the outbound email subject line.</inlineHelpText>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_bcc__c</fullName>
        <label>Email_bcc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_cc__c</fullName>
        <label>Email_cc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Enable_Detail_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking, a child record will be created for each field value on every document created using this template. This will allow for reporting, but will require significantly more data storage.</description>
        <inlineHelpText>By checking, a child record will be created for each field value on every document created using this template. This will allow for reporting, but will require significantly more data storage.</inlineHelpText>
        <label>Enable Detail Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Format_Icon__c</fullName>
        <formula>IMAGE(
CASE(SDOC__Template_Format__c,
&quot;XLS&quot;, &quot;/sfc/images/docicons/doctype_excel_16.png&quot;,
&quot;DOC&quot;, &quot;/sfc/images/docicons/doctype_word_16.png&quot;,
&quot;PDF&quot;, &quot;/sfc/images/docicons/doctype_pdf_16.png&quot;,
&quot;HTML&quot;, &quot;/sfc/images/docicons/doctype_html_16.png&quot;,
&quot;PPT&quot;, &quot;/sfc/images/docicons/doctype_ppt_16.png&quot;,
&quot;&quot;),TEXT(SDOC__Template_Format__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Format_Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__GD_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Google Docs Upload. Check here if you want to allow users to upload this doc to Google docs. Your org must be properly configured for S-Docs to work with Google Docs (see documentation for setup steps)</description>
        <inlineHelpText>Enable Google Docs Upload. Check here if you want to allow users to upload this doc to Google docs. Your org must be properly configured for S-Docs to work with Google Docs (see documentation for setup steps)</inlineHelpText>
        <label>Google Docs Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__InclArticles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically Attach case articles to outbound email</description>
        <inlineHelpText>Automatically Attach case articles to outbound email</inlineHelpText>
        <label>Auto-attach Case Articles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Embed_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, referenced images will be deep embedded (saved with) the document. Otherwise, images are linked to. Embedded images requires a user to click &apos;Yes&apos; when initially opening the document.</description>
        <inlineHelpText>If checked, referenced images will be deep embedded (saved with) the document. Otherwise, images are linked to. Embedded images requires a user to click &apos;Yes&apos; when initially opening the document.</inlineHelpText>
        <label>MS Embed Images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPFooter_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the First Page Footer</description>
        <inlineHelpText>Definition used for the background image of the First Page Footer</inlineHelpText>
        <label>MS First Page Footer BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPFooter_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of the First Page Footer</description>
        <inlineHelpText>This image will be used for the background of the First Page Footer</inlineHelpText>
        <label>MS First Page Footer Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPFooter_Content__c</fullName>
        <description>Content to appear on the First Page Footer</description>
        <inlineHelpText>Content to appear on the First Page Footer</inlineHelpText>
        <label>MS First Page Footer Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPHeader_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the First Page Header</description>
        <inlineHelpText>Definition used for the background image of the First Page Header</inlineHelpText>
        <label>MS First Page Header BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPHeader_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of the First Page Header</description>
        <inlineHelpText>This image will be used for the background of the First Page Header</inlineHelpText>
        <label>MS First Page Header Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPHeader_Content__c</fullName>
        <description>Content to appear on the First Page Header</description>
        <inlineHelpText>Content to appear on the First Page Header</inlineHelpText>
        <label>MS First Page Header Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Header_And_Footer_Definitions__c</fullName>
        <label>MS Header Footer Definitions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Definition__c</fullName>
        <label>MS Page Definitions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Footer_Margin__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Footer Margin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Header_Margin__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Header Margin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Height__c</fullName>
        <defaultValue>&quot;11.0&quot;</defaultValue>
        <label>MS Page Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Margin_Left__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Margin Left</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Margin_Right__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Margin Right</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Width__c</fullName>
        <defaultValue>&quot;8.5&quot;</defaultValue>
        <label>MS Page Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPFooter_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the Remaining Page Footers</description>
        <inlineHelpText>Definition used for the background image of the Remaining Page Footers</inlineHelpText>
        <label>MS Second Page Footer BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPFooter_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of all pages (except first) Footers</description>
        <inlineHelpText>This image will be used for the background of all pages (except first) Footers</inlineHelpText>
        <label>MS Second Page Footer Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPFooter_Content__c</fullName>
        <description>Content to appear on all pages (except first) Footers</description>
        <inlineHelpText>Content to appear on all pages (except first) Footers</inlineHelpText>
        <label>MS Second Page Footer Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPHeader_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the Remaining Page Headers</description>
        <inlineHelpText>Definition used for the background image of the Remaining Page Headers</inlineHelpText>
        <label>MS Second Page Header BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPHeader_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of all pages (except first) Headers</description>
        <inlineHelpText>This image will be used for the background of all pages (except first) Headers</inlineHelpText>
        <label>MS Second Page Header Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPHeader_Content__c</fullName>
        <description>Content to appear on all pages (except first) Headers</description>
        <inlineHelpText>Content to appear on all pages (except first) Headers</inlineHelpText>
        <label>MS Second Page Header Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Unit_of_Measure__c</fullName>
        <description>Margins and Spacing Values are in this unit of measure.</description>
        <inlineHelpText>Margins and Spacing Values are in this unit of measure.</inlineHelpText>
        <label>MS Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Inches</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Centimeters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pixels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Use_Advanced_Properties__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable MS header, footer and paproperty definitions</description>
        <inlineHelpText>Checking this box will enable Advanced MS Properties like Footer/Header Definitions and page properties. You should leave this unchecked for your existing S-Docs templates where you have defined this in the template body.</inlineHelpText>
        <label>MS Use Advanced Properties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__PDF_Unicode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Unicode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__S3_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Amazon S3 Docs Upload. Check here if you want to allow users to upload this doc to Amazon S3.</inlineHelpText>
        <label>Amazon S3 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__SD_K__c</fullName>
        <label>SD_K</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SDOC__Tags__c</fullName>
        <label>Tags</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_CSS_XML__c</fullName>
        <label>Template CSS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_Format__c</fullName>
        <description>Output format of the generated documents. To support multiple formats, simply clone the template with a different Format field value.</description>
        <inlineHelpText>Output format of the generated documents. To support multiple formats, simply clone the template with a different Format field value.</inlineHelpText>
        <label>Template Format</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML10__c</fullName>
        <label>TemplateXML10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML2__c</fullName>
        <label>TemplateXML2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML3__c</fullName>
        <label>TemplateXML3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode10__c</fullName>
        <label>Template XML Encode10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode2__c</fullName>
        <label>Template XML Encode2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode3__c</fullName>
        <label>Template XML Encode3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Terms_XML_Encode__c</fullName>
        <label>Terms_XML_Encode</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Terms_XML__c</fullName>
        <description>Terms and Conditions</description>
        <label>Terms_XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Version__c</fullName>
        <description>Use this field to track any internally used version number (or date) for this template. It only used for reference purposes.</description>
        <inlineHelpText>Use this field to track any internally used version number (or date) for this template. It only used for reference purposes.</inlineHelpText>
        <label>Document Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SDoc Template</label>
    <listViews>
        <fullName>SDOC__All</fullName>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__GD_Enabled__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SDOC__View1</fullName>
        <columns>NAME</columns>
        <columns>SDOC__Template_Format__c</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Document_Category__c</columns>
        <columns>SDOC__Description__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>View1</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S-Docs Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>